--- a/style/nyelvek.css
+++ b/style/nyelvek.css
@@ -30,7 +30,7 @@ h1 {
 
 h2 {
     font-size: 2.5rem;
-    margin: 3% 0 1%;
+    margin: 2.5% 0 1%;
     font-weight: bold;
 }
 
@@ -39,10 +39,19 @@ h3 {
     margin: 2% 0;
 }
 
+h4 {
+    font-size: 1.5rem;
+    margin: 1.25% 0;
+}
+
 p {
     text-align: justify;
     line-height: 2;
-    margin: 0;
+    margin: 1.25% 0;
+}
+
+.p-bold {
+    font-weight: bold;
 }
 
 img {
@@ -52,13 +61,21 @@ img {
 
 /* táblázathoz szabályok */
 
-#elo-table {
+table {
     margin: 3% auto;
 }
 
-.elo-table th, td {
+th, td {
     border: 3px solid;
     border-collapse: collapse;
+}
+
+td:nth-child(1), td:nth-child(3) {
+    width: 25%;
+}
+
+td:nth-child(2) {
+    width: 50%;
 }
 
 /* lábjegyzet */
@@ -71,7 +88,7 @@ footer {
 
 @media screen and (max-width: 992px) {
     h2 {
-        margin-top: 12%;
+        margin-top: 8%;
     }
 }
 
