--- a/style/nyelvek.css
+++ b/style/nyelvek.css
@@ -46,8 +46,12 @@ h4 {
 
 p {
     text-align: justify;
-    line-height: 2;
+    line-height: 1.5;
     margin: 1.25% 0 0;
+}
+
+li {
+    margin: 0.75% 0 0;
 }
 
 .p-bold {
